# read_aztec

./: LICENSE  Makefile  pyproject.toml  read_aztec.py
