[tool.poetry]
name = "read-aztec"
version = "0.0.0"
description = "Read Aztec MTB from LSR110 scanner"
license = "BSD-2-Clause"
authors = ["Jakob Schlyter <jakob@kirei.se>"]

[tool.poetry.dependencies]
python = "^3.11"
pyserial = "^3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
